tooling/nargo_cli/tests/snapshots/execution_failure/div_by_zero_witness/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Failed constraint
  ┌─ src/main.nr:3:20
  │
3 │     let a: Field = x / y;
  │                    -----
  │
  = Call stack:
    1. src/main.nr:3:20

Failed to solve program: 'Cannot satisfy constraint'
