tooling/nargo_cli/tests/snapshots/execution_failure/div_by_zero_witness/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: 'Attempted to divide by zero'
  ┌─ src/main.nr:3:20
  │
3 │     let a: Field = x / y;
  │                    -----
  │
  = Call stack:
    1. src/main.nr:3:20

Failed assertion
