tooling/nargo_cli/tests/snapshots/execution_failure/div_by_zero_witness/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to divide by zero
  ┌─ src/main.nr:3:20
  │
3 │     let a: Field = x / y;
  │                    -----
  │

Error interpreting main function
