tooling/nargo_cli/tests/snapshots/execution_failure/div_by_zero_witness/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Failed constraint
  ┌─ src/main.nr:3:20
  │
3 │     let a: Field = x / y;
  │                    -----
  │
  = Call stack:
    1. src/main.nr:3:20

Failed to solve program: 'Cannot satisfy constraint'
